--- a/lobby.html
+++ b/lobby.html
@@ -21,6 +21,13 @@
                     <h3>Stakelogic Slot</h3>
                     <p>Makaraları çevir, şansını yakala!</p>
                 </a>
+
+                <a href="plinko_oyunu/index.html" class="game-card" id="plinkoGameCard">
+                    <img src="assets/images/plinko_game_thumb.png" alt="Plinko Oyunu" class="game-thumbnail">
+                    <h3>Hansell'in Plinko Macerası</h3>
+                    <p>Topu bırak, şansını dene!</p>
+
+                </a>
             </div>
         </main>
 
