--- a/plinko_oyunu/index.html
+++ b/plinko_oyunu/index.html
@@ -34,7 +34,7 @@
 
                 <div class="setting-group">
                     <label for="ballCount">Top Sayısı:</label>
-                    <input type="number" id="ballCount" value="1" min="1" max="10">
+                    <input type="number" id="ballCount" value="1" min="1"> 
                 </div>
 
                 <div class="setting-group">
