--- a/plinko_oyunu/index.html
+++ b/plinko_oyunu/index.html
@@ -56,6 +56,6 @@
     <audio id="hitSound" src="../assets/sounds/hit.mp3" preload="auto"></audio>
     <audio id="prizeSound" src="../assets/sounds/prize.mp3" preload="auto"></audio>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
