--- a/plinko_oyunu/index.html
+++ b/plinko_oyunu/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hansell'in Plinko Macerası</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container plinko-container">
@@ -17,7 +17,7 @@
         </div>
 
         <h1>Hansell'in Plinko Macerası ⚪️⬇️</h1>
-        <img src="../assets/images/plinko_character.png" alt="Plinko Karakteri" class="plinko-character-image">
+        <img src="../../assets/images/plinko_character.png" alt="Plinko Karakteri" class="plinko-character-image">
 
         <p>Bakiyen: <span id="balance">0.00</span> TL</p>
 
@@ -52,9 +52,9 @@
         <p id="winAmount"></p>
     </div>
 
-    <audio id="dropSound" src="../assets/sounds/drop.mp3" preload="auto"></audio>
-    <audio id="hitSound" src="../assets/sounds/hit.mp3" preload="auto"></audio>
-    <audio id="prizeSound" src="../assets/sounds/prize.mp3" preload="auto"></audio>
+    <audio id="dropSound" src="../../assets/sounds/drop.mp3" preload="auto"></audio>
+    <audio id="hitSound" src="../../assets/sounds/hit.mp3" preload="auto"></audio>
+    <audio id="prizeSound" src="../../assets/sounds/prize.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
 </body>
