--- a/lobby.html
+++ b/lobby.html
@@ -22,12 +22,11 @@
                     <p>Makaraları çevir, şansını yakala!</p>
                 </a>
 
-                <a href="plinko_oyunu/index.html" class="game-card" id="plinkoGameCard">
-                    <img src="assets/images/plinko_game_thumb.png" alt="Plinko Oyunu" class="game-thumbnail">
-                    <h3>Hansell'in Plinko Macerası</h3>
-                    <p>Topu bırak, şansını dene!</p>
+                <div class="game-card coming-soon-card">
+                    <h3>ÇOK YAKINDA!</h3>
+                    <p>Yeni ve heyecanlı oyunlar yolda!</p>
+                    </div>
 
-                </a>
             </div>
         </main>
 
