--- a/lobby.html
+++ b/lobby.html
@@ -27,6 +27,12 @@
                     <p>Yeni ve heyecanlı oyunlar yolda!</p>
                     </div>
 
+                <div class="game-card my-photo-card">
+                    <h3>Hansell'in Köşesi</h3>
+                    <img src="assets/images/kendi_fotografin.jpg" alt="Hansell'in Fotoğrafı" class="my-photo">
+                    <p>Burada senin fotoğrafın olacak!</p>
+                </div>
+
             </div>
         </main>
 
