--- a/lobby.html
+++ b/lobby.html
@@ -22,12 +22,16 @@
                     <p>Makaraları çevir, şansını yakala!</p>
                 </a>
 
+                <a href="aviator_oyunu/index.html" class="game-card" id="aviatorGameCard"> <img src="assets/images/aviator_thumb.png" alt="Aviator Oyunu" class="game-thumbnail">
+                    <h3>Aviator</h3>
+                    <p>Uçak yükseldikçe kazan!</p>
+                </a>
+
                 <div class="game-card coming-soon-card">
                     <h3>ÇOK YAKINDA!</h3>
                     <p>Yeni ve heyecanlı oyunlar yolda!</p>
-                    </div>
-
                 </div>
+            </div>
         </main>
 
         <footer>
