--- a/aviator_oyunu/index.html
+++ b/aviator_oyunu/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hansell'in Casino Mekanı - Aviator</title>
-    <link rel="stylesheet" href="../style.css"> <link rel="stylesheet" href="aviator.css"> </head>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="aviator.css">
+</head>
 <body>
     <div class="casino-container aviator-game">
         <header>
@@ -14,10 +16,15 @@
         </header>
 
         <main class="aviator-main">
+            <div class="past-multipliers" id="pastMultipliers">
+                </div>
+
             <div class="game-area">
+                <canvas id="gameCanvas"></canvas>
                 <div class="multiplier-display" id="multiplierDisplay">1.00x</div>
                 <img src="../assets/images/airplane.png" alt="Aviator Uçağı" class="airplane" id="airplane">
-                </div>
+                <div class="countdown-timer" id="countdownTimer">10</div>
+            </div>
 
             <div class="betting-area">
                 <div class="bet-input-group">
@@ -35,5 +42,7 @@
         </footer>
     </div>
 
-    <script src="../script.js"></script> <script src="aviator.js"></script> </body>
+    <script src="../script.js"></script>
+    <script src="aviator.js"></script>
+</body>
 </html>
