--- a/lobby.html
+++ b/lobby.html
@@ -22,7 +22,7 @@
                     <p>Makaraları çevir, şansını yakala!</p>
                 </a>
 
-               <a href="aviator_oyunu/aviator.html" class="game-card" id="aviatorGameCard">
+               <a href="aviator_oyunu/index.html" class="game-card" id="aviatorGameCard">
     <img src="assets/images/aviator_thumb.png" alt="Aviator Oyunu" class="game-thumbnail">
     <h3>Aviator</h3>
     <p>Uçak yükseldikçe kazan!</p>
