--- a/lobby.html
+++ b/lobby.html
@@ -20,12 +20,15 @@
                     <img src="assets/images/slot_game_thumb.png" alt="Slot Oyunu" class="game-thumbnail">
                     <h3>Stakelogic Slot</h3>
                     <p>Makaraları çevir, şansını yakala!</p>
-                </a>
-
-               <a href="aviator_game.html" class="game-card" id="aviatorGameCard"> <img src="assets/images/aviator_thumb.png" alt="Aviator Oyunu" class="game-thumbnail">
+                <div class="game-card disabled" id="aviatorGameCard" style="position: relative; overflow: hidden; opacity: 0.6; cursor: not-allowed;"> 
+    <img src="assets/images/aviator_thumb.png" alt="Aviator Oyunu" class="game-thumbnail">
     <h3>Aviator</h3>
     <p>Uçak yükseldikçe kazan!</p>
-</a>
+    
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 10;">
+        <span style="color: red; font-size: 2em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">ARIZALI</span>
+    </div>
+</div>
 
                 <div class="game-card coming-soon-card">
                     <h3>ÇOK YAKINDA!</h3>
