--- a/rulet_oyunu/rulet.html
+++ b/rulet_oyunu/rulet.html
@@ -29,6 +29,7 @@
             <div class="info-item">Zaman: <span id="timerDisplay">30</span></div>
             <div class="info-item">Bakiye: <span id="coinDisplay">0</span></div>
             <div class="info-item">Bahis: <span id="betDisplay">0</span></div>
+            <button id="musicToggleButton" class="music-toggle-button">Müziği Kapat</button>
         </div>
 
         <div class="game-area">
@@ -37,9 +38,9 @@
                 <div class="wheel-pointer"></div>
             </div>
 
-            <div class="betting-table-container">
+            <div class="betting-table-container" id="bettingTableContainer">
                 <img src="../assets/images/roulette_table.png" alt="Rulet Masası" class="roulette-table-image">
-            </div>
+                </div>
         </div>
 
         <div class="previous-results">
