--- a/rulet_oyunu/rulet.html
+++ b/rulet_oyunu/rulet.html
@@ -39,66 +39,77 @@
             </div>
 
             <div class="betting-table-container" id="bettingTableContainer">
-                <img src="../assets/images/roulette_table.png" alt="Rulet Masası" class="roulette-table-image">
-                <div class="bet-areas-overlay">
-                    <div class="bet-area bet-number" data-bet="0"><span>0</span></div>
-                    <div class="bet-area bet-number" data-bet="1"><span>1</span></div>
-                    <div class="bet-area bet-number" data-bet="2"><span>2</span></div>
-                    <div class="bet-area bet-number" data-bet="3"><span>3</span></div>
-                    <div class="bet-area bet-number" data-bet="4"><span>4</span></div>
-                    <div class="bet-area bet-number" data-bet="5"><span>5</span></div>
-                    <div class="bet-area bet-number" data-bet="6"><span>6</span></div>
-                    <div class="bet-area bet-number" data-bet="7"><span>7</span></div>
-                    <div class="bet-area bet-number" data-bet="8"><span>8</span></div>
-                    <div class="bet-area bet-number" data-bet="9"><span>9</span></div>
-                    <div class="bet-area bet-number" data-bet="10"><span>10</span></div>
-                    <div class="bet-area bet-number" data-bet="11"><span>11</span></div>
-                    <div class="bet-area bet-number" data-bet="12"><span>12</span></div>
-                    <div class="bet-area bet-number" data-bet="13"><span>13</span></div>
-                    <div class="bet-area bet-number" data-bet="14"><span>14</span></div>
-                    <div class="bet-area bet-number" data-bet="15"><span>15</span></div>
-                    <div class="bet-area bet-number" data-bet="16"><span>16</span></div>
-                    <div class="bet-area bet-number" data-bet="17"><span>17</span></div>
-                    <div class="bet-area bet-number" data-bet="18"><span>18</span></div>
-                    <div class="bet-area bet-number" data-bet="19"><span>19</span></div>
-                    <div class="bet-area bet-number" data-bet="20"><span>20</span></div>
-                    <div class="bet-area bet-number" data-bet="21"><span>21</span></div>
-                    <div class="bet-area bet-number" data-bet="22"><span>22</span></div>
-                    <div class="bet-area bet-number" data-bet="23"><span>23</span></div>
-                    <div class="bet-area bet-number" data-bet="24"><span>24</span></div>
-                    <div class="bet-area bet-number" data-bet="25"><span>25</span></div>
-                    <div class="bet-area bet-number" data-bet="26"><span>26</span></div>
-                    <div class="bet-area bet-number" data-bet="27"><span>27</span></div>
-                    <div class="bet-area bet-number" data-bet="28"><span>28</span></div>
-                    <div class="bet-area bet-number" data-bet="29"><span>29</span></div>
-                    <div class="bet-area bet-number" data-bet="30"><span>30</span></div>
-                    <div class="bet-area bet-number" data-bet="31"><span>31</span></div>
-                    <div class="bet-area bet-number" data-bet="32"><span>32</span></div>
-                    <div class="bet-area bet-number" data-bet="33"><span>33</span></div>
-                    <div class="bet-area bet-number" data-bet="34"><span>34</span></div>
-                    <div class="bet-area bet-number" data-bet="35"><span>35</span></div>
-                    <div class="bet-area bet-number" data-bet="36"><span>36</span></div>
+                <div class="bet-areas-grid">
+                    <div class="bet-area zero-cell" data-bet="0"><span>0</span></div>
 
-                    <div class="bet-area bet-column" data-bet="col1"><span>2 to 1</span></div>
-                    <div class="bet-area bet-column" data-bet="col2"><span>2 to 1</span></div>
-                    <div class="bet-area bet-column" data-bet="col3"><span>2 to 1</span></div>
-
-                    <div class="bet-area bet-dozen" data-bet="1st-12"><span>1st 12</span></div>
-                    <div class="bet-area bet-dozen" data-bet="2nd-12"><span>2nd 12</span></div>
-                    <div class="bet-area bet-dozen" data-bet="3rd-12"><span>3rd 12</span></div>
-                    
-                    <div class="bet-area bet-range" data-bet="1-18"><span>1-18</span></div>
-                    <div class="bet-area bet-range" data-bet="19-36"><span>19-36</span></div>
-
-                    <div class="bet-area bet-type" data-bet="even"><span>EVEN</span></div>
-                    <div class="bet-area bet-type" data-bet="odd"><span>ODD</span></div>
-
-                    <div class="bet-area bet-color" data-bet="red"><span>RED</span></div>
-                    <div class="bet-area bet-color" data-bet="black"><span>BLACK</span></div>
-
-                    <div class="player-chips-overlay" id="playerChipsOverlay">
+                    <div class="numbers-grid">
+                        <div class="number-row">
+                            <div class="bet-area number-cell" data-bet="3"><span>3</span></div>
+                            <div class="bet-area number-cell" data-bet="6"><span>6</span></div>
+                            <div class="bet-area number-cell" data-bet="9"><span>9</span></div>
+                            <div class="bet-area number-cell" data-bet="12"><span>12</span></div>
+                            <div class="bet-area number-cell" data-bet="15"><span>15</span></div>
+                            <div class="bet-area number-cell" data-bet="18"><span>18</span></div>
+                            <div class="bet-area number-cell" data-bet="21"><span>21</span></div>
+                            <div class="bet-area number-cell" data-bet="24"><span>24</span></div>
+                            <div class="bet-area number-cell" data-bet="27"><span>27</span></div>
+                            <div class="bet-area number-cell" data-bet="30"><span>30</span></div>
+                            <div class="bet-area number-cell" data-bet="33"><span>33</span></div>
+                            <div class="bet-area number-cell" data-bet="36"><span>36</span></div>
                         </div>
+                        <div class="number-row">
+                            <div class="bet-area number-cell" data-bet="2"><span>2</span></div>
+                            <div class="bet-area number-cell" data-bet="5"><span>5</span></div>
+                            <div class="bet-area number-cell" data-bet="8"><span>8</span></div>
+                            <div class="bet-area number-cell" data-bet="11"><span>11</span></div>
+                            <div class="bet-area number-cell" data-bet="14"><span>14</span></div>
+                            <div class="bet-area number-cell" data-bet="17"><span>17</span></div>
+                            <div class="bet-area number-cell" data-bet="20"><span>20</span></div>
+                            <div class="bet-area number-cell" data-bet="23"><span>23</span></div>
+                            <div class="bet-area number-cell" data-bet="26"><span>26</span></div>
+                            <div class="bet-area number-cell" data-bet="29"><span>29</span></div>
+                            <div class="bet-area number-cell" data-bet="32"><span>32</span></div>
+                            <div class="bet-area number-cell" data-bet="35"><span>35</span></div>
+                        </div>
+                        <div class="number-row">
+                            <div class="bet-area number-cell" data-bet="1"><span>1</span></div>
+                            <div class="bet-area number-cell" data-bet="4"><span>4</span></div>
+                            <div class="bet-area number-cell" data-bet="7"><span>7</span></div>
+                            <div class="bet-area number-cell" data-bet="10"><span>10</span></div>
+                            <div class="bet-area number-cell" data-bet="13"><span>13</span></div>
+                            <div class="bet-area number-cell" data-bet="16"><span>16</span></div>
+                            <div class="bet-area number-cell" data-bet="19"><span>19</span></div>
+                            <div class="bet-area number-cell" data-bet="22"><span>22</span></div>
+                            <div class="bet-area number-cell" data-bet="25"><span>25</span></div>
+                            <div class="bet-area number-cell" data-bet="28"><span>28</span></div>
+                            <div class="bet-area number-cell" data-bet="31"><span>31</span></div>
+                            <div class="bet-area number-cell" data-bet="34"><span>34</span></div>
+                        </div>
+                    </div>
+
+                    <div class="column-bets">
+                        <div class="bet-area column-cell" data-bet="col1"><span>2:1</span></div>
+                        <div class="bet-area column-cell" data-bet="col2"><span>2:1</span></div>
+                        <div class="bet-area column-cell" data-bet="col3"><span>2:1</span></div>
+                    </div>
+
+                    <div class="outside-bets-row">
+                        <div class="bet-area outside-cell" data-bet="1st-12"><span>1st 12</span></div>
+                        <div class="bet-area outside-cell" data-bet="2nd-12"><span>2nd 12</span></div>
+                        <div class="bet-area outside-cell" data-bet="3rd-12"><span>3rd 12</span></div>
+                    </div>
+                    <div class="outside-bets-row">
+                        <div class="bet-area outside-cell" data-bet="1-18"><span>1-18</span></div>
+                        <div class="bet-area outside-cell" data-bet="even"><span>EVEN</span></div>
+                        <div class="bet-area outside-cell" data-bet="red"><span>🔴</span></div>
+                        <div class="bet-area outside-cell" data-bet="black"><span>⚫</span></div>
+                        <div class="bet-area outside-cell" data-bet="odd"><span>ODD</span></div>
+                        <div class="bet-area outside-cell" data-bet="19-36"><span>19-36</span></div>
+                    </div>
                 </div>
+                
+                <div class="player-chips-overlay" id="playerChipsOverlay">
+                    </div>
             </div>
         </div>
 
