--- a/rulet_oyunu/index.html
+++ b/rulet_oyunu/index.html
@@ -1,103 +1,98 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rulet Oyunu</title>
-    <link rel="stylesheet" href="style.css"> </head>
-<body>
-
-    <div class="game-container">
+<div class="game-container">
         <h1>Avrupa Ruleti</h1>
 
-        <div class="roulette-section">
-            <div class="roulette-wheel">
-                <div class="ball"></div> <div class="wheel-pointer"></div> </div>
-            <div class="wheel-display">
-                <span id="lastResultText">Sonuç: </span><span id="lastResult">-</span>
-            </div>
-        </div>
-
-
-        <div class="betting-table-container">
-            <div class="zero-cell betting-cell" data-bet="0">0</div>
-            <div class="numbers-grid-container">
-                <div class="column">
-                    <div class="number-cell red betting-cell" data-bet="3">3</div>
-                    <div class="number-cell black betting-cell" data-bet="6">6</div>
-                    <div class="number-cell red betting-cell" data-bet="9">9</div>
-                    <div class="number-cell black betting-cell" data-bet="12">12</div>
-                    <div class="number-cell red betting-cell" data-bet="15">15</div>
-                    <div class="number-cell black betting-cell" data-bet="18">18</div>
-                    <div class="number-cell red betting-cell" data-bet="21">21</div>
-                    <div class="number-cell black betting-cell" data-bet="24">24</div>
-                    <div class="number-cell red betting-cell" data-bet="27">27</div>
-                    <div class="number-cell black betting-cell" data-bet="30">30</div>
-                    <div class="number-cell red betting-cell" data-bet="33">33</div>
-                    <div class="number-cell black betting-cell" data-bet="36">36</div>
-                </div>
-                <div class="column">
-                    <div class="number-cell black betting-cell" data-bet="2">2</div>
-                    <div class="number-cell red betting-cell" data-bet="5">5</div>
-                    <div class="number-cell black betting-cell" data-bet="8">8</div>
-                    <div class="number-cell red betting-cell" data-bet="11">11</div>
-                    <div class="number-cell black betting-cell" data-bet="14">14</div>
-                    <div class="number-cell red betting-cell" data-bet="17">17</div>
-                    <div class="number-cell black betting-cell" data-bet="20">20</div>
-                    <div class="number-cell red betting-cell" data-bet="23">23</div>
-                    <div class="number-cell black betting-cell" data-bet="26">26</div>
-                    <div class="number-cell red betting-cell" data-bet="29">29</div>
-                    <div class="number-cell black betting-cell" data-bet="32">32</div>
-                    <div class="number-cell red betting-cell" data-bet="35">35</div>
-                </div>
-                <div class="column">
-                    <div class="number-cell red betting-cell" data-bet="1">1</div>
-                    <div class="number-cell black betting-cell" data-bet="4">4</div>
-                    <div class="number-cell red betting-cell" data-bet="7">7</div>
-                    <div class="number-cell black betting-cell" data-bet="10">10</div>
-                    <div class="number-cell red betting-cell" data-bet="13">13</div>
-                    <div class="number-cell black betting-cell" data-bet="16">16</div>
-                    <div class="number-cell red betting-cell" data-bet="19">19</div>
-                    <div class="number-cell black betting-cell" data-bet="22">22</div>
-                    <div class="number-cell red betting-cell" data-bet="25">25</div>
-                    <div class="number-cell black betting-cell" data-bet="28">28</div>
-                    <div class="number-cell red betting-cell" data-bet="31">31</div>
-                    <div class="number-cell black betting-cell" data-bet="34">34</div>
+        <div class="main-game-area">
+            <div class="roulette-section">
+                <div class="roulette-wheel-outer">
+                    <div class="roulette-wheel">
+                        <div class="ball"></div> </div>
+                    <div class="wheel-pointer"></div> </div>
+                <div class="wheel-display">
+                    <span id="lastResultText">Sonuç: </span><span id="lastResult">-</span>
                 </div>
             </div>
-            <div class="column-multipliers">
-                <div class="betting-cell" data-bet="col3">2-1</div>
-                <div class="betting-cell" data-bet="col2">2-1</div>
-                <div class="betting-cell" data-bet="col1">2-1</div>
+
+
+            <div class="betting-table-container">
+                <div class="zero-cell betting-cell" data-bet="0">0</div>
+                <div class="numbers-grid-container">
+                    <div class="column">
+                        <div class="number-cell red betting-cell" data-bet="3">3</div>
+                        <div class="number-cell black betting-cell" data-bet="6">6</div>
+                        <div class="number-cell red betting-cell" data-bet="9">9</div>
+                        <div class="number-cell black betting-cell" data-bet="12">12</div>
+                        <div class="number-cell red betting-cell" data-bet="15">15</div>
+                        <div class="number-cell black betting-cell" data-bet="18">18</div>
+                        <div class="number-cell red betting-cell" data-bet="21">21</div>
+                        <div class="number-cell black betting-cell" data-bet="24">24</div>
+                        <div class="number-cell red betting-cell" data-bet="27">27</div>
+                        <div class="number-cell black betting-cell" data-bet="30">30</div>
+                        <div class="number-cell red betting-cell" data-bet="33">33</div>
+                        <div class="number-cell black betting-cell" data-bet="36">36</div>
+                    </div>
+                    <div class="column">
+                        <div class="number-cell black betting-cell" data-bet="2">2</div>
+                        <div class="number-cell red betting-cell" data-bet="5">5</div>
+                        <div class="number-cell black betting-cell" data-bet="8">8</div>
+                        <div class="number-cell red betting-cell" data-bet="11">11</div>
+                        <div class="number-cell black betting-cell" data-bet="14">14</div>
+                        <div class="number-cell red betting-cell" data-bet="17">17</div>
+                        <div class="number-cell black betting-cell" data-bet="20">20</div>
+                        <div class="number-cell red betting-cell" data-bet="23">23</div>
+                        <div class="number-cell black betting-cell" data-bet="26">26</div>
+                        <div class="number-cell red betting-cell" data-bet="29">29</div>
+                        <div class="number-cell black betting-cell" data-bet="32">32</div>
+                        <div class="number-cell red betting-cell" data-bet="35">35</div>
+                    </div>
+                    <div class="column">
+                        <div class="number-cell red betting-cell" data-bet="1">1</div>
+                        <div class="number-cell black betting-cell" data-bet="4">4</div>
+                        <div class="number-cell red betting-cell" data-bet="7">7</div>
+                        <div class="number-cell black betting-cell" data-bet="10">10</div>
+                        <div class="number-cell red betting-cell" data-bet="13">13</div>
+                        <div class="number-cell black betting-cell" data-bet="16">16</div>
+                        <div class="number-cell red betting-cell" data-bet="19">19</div>
+                        <div class="number-cell black betting-cell" data-bet="22">22</div>
+                        <div class="number-cell red betting-cell" data-bet="25">25</div>
+                        <div class="number-cell black betting-cell" data-bet="28">28</div>
+                        <div class="number-cell red betting-cell" data-bet="31">31</div>
+                        <div class="number-cell black betting-cell" data-bet="34">34</div>
+                    </div>
+                </div>
+                <div class="column-multipliers">
+                    <div class="betting-cell" data-bet="col3">2-1</div>
+                    <div class="betting-cell" data-bet="col2">2-1</div>
+                    <div class="betting-cell" data-bet="col1">2-1</div>
+                </div>
+
+                <div class="dozen-bets">
+                    <div class="betting-cell" data-bet="1st12">1st 12</div>
+                    <div class="betting-cell" data-bet="2nd12">2nd 12</div>
+                    <div class="betting-cell" data-bet="3rd12">3rd 12</div>
+                </div>
+
+                <div class="half-bets">
+                    <div class="betting-cell" data-bet="1-18">1-18</div>
+                    <div class="betting-cell" data-bet="even">EVEN</div>
+                    <div class="betting-cell red-bg" data-bet="red">RED</div>
+                    <div class="betting-cell black-bg" data-bet="black">BLACK</div>
+                    <div class="betting-cell" data-bet="odd">ODD</div>
+                    <div class="betting-cell" data-bet="19-36">19-36</div>
+                </div>
+            </div>
+        </div> <div class="sidebar-right">
+            <div class="chip-selection">
+                <h2>Çipler</h2>
+                <div class="chips">
+                    <div class="chip" data-value="1">1</div>
+                    <div class="chip" data-value="5">5</div>
+                    <div class="chip" data-value="10">10</div>
+                    <div class="chip" data-value="25">25</div>
+                    <div class="chip" data-value="100">100</div>
+                </div>
             </div>
 
-            <div class="dozen-bets">
-                <div class="betting-cell" data-bet="1st12">1st 12</div>
-                <div class="betting-cell" data-bet="2nd12">2nd 12</div>
-                <div class="betting-cell" data-bet="3rd12">3rd 12</div>
-            </div>
-
-            <div class="half-bets">
-                <div class="betting-cell" data-bet="1-18">1-18</div>
-                <div class="betting-cell" data-bet="even">EVEN</div>
-                <div class="betting-cell red-bg" data-bet="red">RED</div>
-                <div class="betting-cell black-bg" data-bet="black">BLACK</div>
-                <div class="betting-cell" data-bet="odd">ODD</div>
-                <div class="betting-cell" data-bet="19-36">19-36</div>
-            </div>
-        </div>
-
-        <div class="chip-selection">
-            <h2>Çipler</h2>
-            <div class="chips">
-                <div class="chip" data-value="1">1</div>
-                <div class="chip" data-value="5">5</div>
-                <div class="chip" data-value="10">10</div>
-                <div class="chip" data-value="25">25</div>
-                <div class="chip" data-value="100">100</div>
-            </div>
             <div class="game-controls">
-                <button id="spinButton">Çarkı Çevir</button>
                 <button id="clearBetsButton">Bahisleri Temizle</button>
             </div>
             <div class="game-info">
@@ -111,7 +106,5 @@
                 <input type="range" id="sfxVolume" min="0" max="1" step="0.01" value="0.7">
             </div>
         </div>
-    </div>
 
-    <script src="script.js"></script> </body>
-</html>
+    </div>
