--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -13,7 +13,7 @@
             <h1 id="zeusSlotTitle">Zeus Slot</h1>
             <div class="music-controls">
                 <button id="musicToggleButton">Müziği Kapat</button>
-                <input type="range" id="musicVolume" min="0" max="1" step="0.1" value="0.2">
+                <input type="range" id="musicVolume" min="0" max="1" step="0.1" value="0.2" title="Müzik Ses Seviyesi">
             </div>
             <p class="balance-info-right">Bakiye: <span id="balance">0.00</span> TL</p>
         </header>
@@ -32,13 +32,13 @@
 
             <div class="controls">
                 <div class="balance-bet-info">
-                    <p>Bakiye: <span id="currentBalance">0.00</span> TL</p> 
+                    <p>Bakiye: <span id="currentBalance">0.00</span> TL</p>
                     <p>Bahis: <span id="currentBet">10.00</span> TL</p>
-                    <p>Bedava Spin: <span id="freeSpinsCount">0</span></p> 
+                    <p>Bedava Spin: <span id="freeSpinsCount">0</span></p>
                 </div>
                 <div class="bet-controls">
-                    <button id="betMinus">-</button>
-                    <button id="betPlus">+</button>
+                    <button id="betMinus" aria-label="Bahis Azalt">-</button>
+                    <button id="betPlus" aria-label="Bahis Arttır">+</button>
                 </div>
                 <button id="spinButton" class="spin-button">Çevir</button>
                 <p class="last-win">Son Kazanç: <span id="lastWin">0.00</span> TL</p>
@@ -46,11 +46,10 @@
         </main>
 
         <footer>
-            <button id="backToLobbyButton" class="back-button">Lobisine Geri Dön</button>
+            <button id="backToLobbyButton" class="back-button">Lobiye Geri Dön</button>
             <p>&copy; 2025 Hansell'in Casino Mekanı. Zeus Slot.</p>
         </footer>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
