--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -19,7 +19,9 @@
         </header>
 
         <main class="slot-machine">
-            <div class="character-display left">Zeus Karakteri Sol</div>
+            <div class="character-display left">
+                <img src="assets/images/zeus_sol.png" alt="Zeus Karakteri Sol" />
+            </div>
             
             <div class="reels-container">
                 <div class="reel" id="reel1"></div>
@@ -28,7 +30,9 @@
                 <div class="reel" id="reel4"></div>
             </div>
 
-            <div class="character-display right">Zeus Karakteri Sağ</div>
+            <div class="character-display right">
+                <img src="assets/images/zeus_sag.png" alt="Zeus Karakteri Sağ" />
+            </div>
 
             <div class="controls">
                 <div class="balance-bet-info">
