--- a/lobby.html
+++ b/lobby.html
@@ -23,11 +23,11 @@
                     <h3>Stakelogic Slot</h3>
                     <p>Makaraları çevir, şansını yakala!</p>
                 </a>
-                <div class="game-card" id="zeusSlotCard">
-    <img src="./assets/images/zeus_slot_icon.png" alt="Zeus Slot Oyunu"> <h3>Zeus'un Şimşekleri</h3>
+<a href="slot_oyunu2/index.html" class="game-card" id="zeusSlotCard">
+    <img src="assets/images/zeus_slot_icon.png" alt="Zeus Slot Oyunu" class="game-thumbnail">
+    <h3>Zeus'un Şimşekleri</h3>
     <p>Antik Yunan'ın tanrılarıyla devasa kazançlar yakala!</p>
-    <button class="play-button">Şimdi Oyna!</button>
-</div>
+</a>
     
 
                 <div class="game-card disabled" id="aviatorGameCard" style="position: relative; overflow: hidden; opacity: 0.6; cursor: not-allowed;"> 
