--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -40,7 +40,7 @@
         </div>
         
         <div class="character-area">
-            <img id="slotCharacter" src="../assets/images/slot_character.png" alt="Slot Karakteri">
+            <img id="slotCharacter" src="../assets/images/zeus_slot_character.png" alt="Zeus Slot Karakteri">
         </div>
 
     </div>
