--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -6,13 +6,15 @@
     <title>Zeus'un Şimşekleri - Slot Oyunu</title>
     <link rel="stylesheet" href="../assets/styles/normalize.css">
     <link rel="stylesheet" href="../assets/styles/global.css">
-    <link rel="stylesheet" href="slot_oyunu2_style.css"> </head>
+    <link rel="stylesheet" href="style.css"> 
+</head>
 <body>
     <div class="game-container">
         <header class="game-header">
             <button id="backToLobbyButton" class="lobby-button">Lobiye Dön</button>
             <h1>Zeus'un Şimşekleri</h1>
-            <button id="muteButton" class="mute-button">🔇</button> </header>
+            <button id="muteButton" class="mute-button">🔇</button> 
+        </header>
 
         <div class="slot-machine">
             <div class="slot-grid">
@@ -61,9 +63,11 @@
             <button id="increaseBet">+</button>
             <button id="infoButton">Bilgi</button>
             <button id="spinButton">ÇEVİR!</button>
-            <button id="paylineSettingsButton">Çizgiler</button> </div>
+            <button id="paylineSettingsButton">Çizgiler</button>
+        </div>
         <p id="message" class="game-message">Hadi Başlayalım!</p>
-        <p id="winAmount" class="win-display"></p> </div>
+        <p id="winAmount" class="win-display"></p>
+    </div>
 
     <div id="infoPopup" class="popup">
         <div class="popup-content">
@@ -89,5 +93,6 @@
     <audio id="winSound" src="../assets/sounds/win.mp3"></audio>
     <audio id="bonusSound" src="../assets/sounds/bonus_zeus.mp3"></audio>
 
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script> 
+</body>
 </html>
