--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -88,11 +88,10 @@
         </div>
     </div>
 
-    <audio id="backgroundMusic" loop src="../assets/sounds/background_music.mp3"></audio>
-    <audio id="spinSound" src="../assets/sounds/spin.mp3"></audio>
-    <audio id="winSound" src="../assets/sounds/win.mp3"></audio>
+   <audio id="backgroundMusic" loop src="../assets/sounds/background_music_zeus.mp3"></audio>
+    <audio id="spinSound" src="../assets/sounds/spin_zeus.mp3"3"></audio>
+    <audio id="winSound" src="../assets/sounds/win_zeus.mp3"></audio>
     <audio id="bonusSound" src="../assets/sounds/bonus_zeus.mp3"></audio>
-
     <script src="script.js"></script> 
 </body>
 </html>
