--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -16,36 +16,11 @@
 
         <div class="slot-machine">
             <div class="reels-container">
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
-                <div class="reel"></div>
+                <div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div>
+                <div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div>
+                <div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div>
+                <div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div>
+                <div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div><div class="reel"></div>
             </div>
             <div class="character-display">
                 <img src="../assets/images/zeus_slot_character.png" alt="Zeus Karakteri" id="zeusCharacter">
