--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -43,7 +43,7 @@
             <button id="decreaseBet">-</button>
             <button id="infoButton">Bilgi</button>
             <button id="spinButton">ÇEVİR!</button>
-            <button id="paylineSettingsButton">Çizgiler</button>
+            <button id="autoSpinButton">OTOMATİK ÇEVİR</button> <button id="paylineSettingsButton">Çizgiler</button>
             <button id="increaseBet">+</button>
         </div>
 
