--- a/slot_oyunu2/index.html
+++ b/slot_oyunu2/index.html
@@ -43,7 +43,12 @@
             <button id="decreaseBet">-</button>
             <button id="infoButton">Bilgi</button>
             <button id="spinButton">ÇEVİR!</button>
-            <button id="autoSpinButton">OTOMATİK ÇEVİR</button> <button id="paylineSettingsButton">Çizgiler</button>
+
+            <div class="auto-spin-controls">
+                <input type="number" id="autoSpinCount" value="10" min="1" max="999" class="auto-spin-input">
+                <button id="autoSpinButton">OTOMATİK ÇEVİR</button>
+            </div>
+            <button id="paylineSettingsButton">Çizgiler</button>
             <button id="increaseBet">+</button>
         </div>
 
