--- a/lobby.html
+++ b/lobby.html
@@ -28,6 +28,11 @@
                     <h3>Zeus'un Şimşekleri</h3>
                     <p>Antik Yunan'ın tanrılarıyla devasa kazançlar yakala!</p>
                 </a>
+                <a href="slot_oyunu3/index.html" class="game-card" id="residentSlotCard">
+    <img src="assets/images/resident_slot_thumbnail.jpg" alt="Resident Slot Oyunu" class="game-thumbnail">
+    <h3>RESIDENT SLOT</h3>
+    <p>Gizemli kasaları aç, casusluk dünyasında büyük kazançlara ulaş!</p>
+</a>
                 
                 <div class="game-card disabled" id="aviatorGameCard"> 
                     <img src="assets/images/aviator_thumb.png" alt="Aviator Oyunu" class="game-thumbnail">
